--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "deploy": "gh-pages -d dist",
-    "deploy2": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy2": "push-dir --dir=dist --branch=gh-pages"
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
